# SimplePracticalAstronomy

./: CMakeLists.txt  Doxyfile  README.md  TODO.md
doc/: pawyc_sections.md  spa_bibtex.bib
extra/: GetTimeTest.cc  Makefile
inc/: Date.h  DateAndTime.h  GoodTimer.h  JulianDate.h  SpaConstants.h  SpaDate.h  SpaTime.h  SpaTimeConstants.h  Time.h  TimeDifference.h  TimeUtilities.h
src/: Date.cc  DateAndTime.cc  JulianDate.cc  SpaDate.cc  SpaTime.cc  Time.cc  TimeDifference.cc  TimeUtilities.cc
test/: DateAndTime_TestClass.cc  DateAndTime_TestClass.h  GetTimeTest.cc  GetTimeTest.h  JulianDate_TestClass.cc  JulianDate_TestClass.h  PAWYC_Examples_TestClass.cc  PAWYC_Examples_TestClass.h  PolynomialTiming_TestClass.cc  PolynomialTiming_TestClass.h  SpaDate_TestClass.cc  SpaDate_TestClass.h  SpaTestUtilities.cc  SpaTestUtilities.h  SpaTime_TestClass.cc  SpaTime_TestClass.h  TimeDifference_TestClass.cc  TimeDifference_TestClass.h  TimeUtilities_TestClass.cc  TimeUtilities_TestClass.h  spa_unit_test.cc
